# AuthCodeService

./: .gitignore  README.md  bot.py  main.py  pyproject.toml
api/: broker.py
api/router/: db_router.py  router.py
client/: lifespan.py
db/: base.py  engine.py  models.py  session.py
function/: generate_code.py
schemas/: schema.py
