[project]
name = "rabbitemailsend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.3",
    "faststream[rabbit]>=0.6.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
